Navigation issues, Hero Section Issues, Our Service section issues, Slider overflow issues

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -188,6 +188,7 @@
 
 .nav-contact-phone:hover {
   transform: scale(0.8);
+
 }
 
 @media (max-width: 1200px) {
@@ -214,12 +215,9 @@
     gap: 0.7rem;
   }
 
-  .nav-contact-ph {
-    display: flex;
-  }
-
   .nav-contact-ph{
     margin-right: 0em ;
+    display: flex;
   }
 
 
